--- a/irc_team/Makefile
+++ b/irc_team/Makefile
@@ -12,7 +12,7 @@ NAME		=	ircserv
 all : $(NAME)
 
 $(NAME): $(OBJS)
-	$(CXX) $(OBJS) -o $(NAME)
+	$(CXX) $(CXXFLAGS) $(OBJS) -o $(NAME)
 
 clean:
 	rm -rf $(OBJS)
